Reference_Project/kubernetes-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic-app
  name: petclinic-app
  namespace: petclinic-dev
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1   
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      containers:
      - image: docker.io/iamakshu/petclinic-app@sha256:45ef727bcc28139c16f1c66817747e6a09751d98040982d5bdc7463510bc692b
        name: petclinic

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5

        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

---

apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: petclinic-dev
  labels:
    app: petclinic-svc
spec:
  ports:
  - port: 8080
  selector:
    app: petclinic-app
