Reference_Project/kubernetes-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic-dev
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.local
    http:
      paths:
      - backend:
          service:
            name: petclinic-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - petclinic.local
    secretName: petclinic-tls-secret
status:
  loadBalancer: {}

# kubectl create ingress petclinic-ingress --class=nginx \
# --rule="petclinic.local/*=petclinic-svc:8080,tls=petclinic-tls-secret" \
# -n petclinic-dev --dry-run=client -o yaml > ingress.yml
